# flask-raspi-webapp

./: LICENCE  MANIFEST.in  pyproject.toml  requirements.txt  requirements_dev.txt
webapp/: __init__.py  routes.py  settings.py  utils.py
webapp/templates/webapp/: _layout.html  base.html
